css/style.css
body{
    background-image : url(koi.webp), url(water.webp);
    background-size: 100% auto;
    background-repeat: no-repeat, repeat;
    letter-spacing:   1px;    
    line-height: 1.1;
    text-align: left;


}

.longerspace{
        margin-top: 300px;
        margin-bottom: 20px;
        text-align: left;
        margin-left: 20px;
}

.projects{
    h3{
        font-size: 50px;
        font-family: Andale Mono, monospace;
        font-weight: bold;
        text-shadow: none;
        color: rgb(71, 123, 158);
        text-align: center;
        margin-bottom: 20px;
        margin-top: 17px;
        
        
    }

    p{
        font-family: Andale Mono, monospace;
        font-weight: 400;
        color: rgb(71, 123, 158);
        text-shadow: none;
        text-align:left;


    }
    
}

.projects{
    display: grid;
    overflow-x: scroll;
    justify-content: space-evenly;
    grid-auto-flow: column;
    flex-grow: 1;
    overscroll-behavior-inline: contain;
    
}

.projects::-webkit-scrollbar {
  display: none;
}


.boxes1 {
     width: 400px;
     height: 450px;
            padding: 20px;
            margin: 20px;
            background:rgb(250, 239, 226);
            border-radius: 20px;
            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
            padding: 30px;
            margin-right: 5px;
            margin-left: 5px
        
}



.button-grid {
    height: 200px;
    width: 100%;
    display: flex;
    gap: 10px;
    padding: 20px;
    overflow-x: auto;
    white-space: nowrap;
    overflow-y: hidden;
}


.grid-button {

    width: 200px;
    height: 200px;
    display: flex;
    padding: 20px;
    text-align: center;
    background: #647564;
    color: white;
    text-decoration: none;
    border-radius: 8px;
    font-size: 18px;
    word-spacing: 0%;

}

.grid-button::before{
    content: "";
    display: block;
    width: 0;
    height: 0;
}

.grid-button:hover {
    background: #475a4f;
    cursor: pointer;
    
}




h1{
    font-size: 250px;
    font-family: Andale Mono, monospace;
    font-weight: 800;
    letter-spacing: 0;
    color:rgb(236, 223, 206);
    text-shadow: 10px 10px #477894;
    line-height: 0.01;
    margin-top: 250px;

}

h2{
    font-size: 100px;
    font-family: Andale Mono, monospace;
    font-weight: 800;
    letter-spacing: -1mm;
    color:rgb(236, 223, 206);
    text-shadow: 5px 5px #477894;
    line-height: 0.7;
    text-align: left;
}

h3{
    font-size: 75px;
    font-family: Andale Mono, monospace;
    font-weight: 800;
     letter-spacing: 0mm;
    color:rgb(236, 223, 206);
    text-shadow: 5px 5px #477894;
    text-align: left;
}

p{
    font-size: 25px;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    color: antiquewhite;
    text-shadow: 3px 3px #477894;

}

button {
  background-color: antiquewhite; 
  border: none;
  color: navy;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 30px;
  font-family: Andale Mono, monospace;
  border-radius: 25px;
}

.interests{
    button{
        width: 350px;
        height: 350px;
    }

    
}

.interestsandhobbies{
    button {
        width: 700px;
        height: 400px;
        margin-left: 30px;
        margin-top: 50px;
    }
}

